--- a/www/libs/tabler/src/pages/_data/package.json
+++ b/www/libs/tabler/src/pages/_data/package.json
@@ -1,1 +1,119 @@
-../../../package.json
+{
+  "name": "@tabler/core",
+  "version": "1.0.0-alpha.17",
+  "description": "Premium and Open Source dashboard template with responsive and high quality UI.",
+  "scripts": {
+    "start": "gulp start",
+    "build": "gulp build",
+    "preview": "gulp build --preview",
+    "svg-optimize": "svgo -f svg/brand --pretty",
+    "unused-files": "node build/unused-files.js",
+    "release": "release-it",
+    "svg-icons": "gulp svg-icons",
+    "percy": "gulp build && npx percy snapshot demo"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/tabler/tabler.git"
+  },
+  "keywords": [
+    "css",
+    "sass",
+    "mobile-first",
+    "responsive",
+    "front-end",
+    "framework",
+    "web"
+  ],
+  "author": "codecalm",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/tabler/tabler/issues"
+  },
+  "funding": {
+    "type": "github",
+    "url": "https://github.com/sponsors/codecalm"
+  },
+  "engines": {
+    "node": ">=10"
+  },
+  "files": [
+    "dist/**/*",
+    "src/js/**/*.{js,map}",
+    "src/img/**/*.{svg}",
+    "src/scss/**/*.scss"
+  ],
+  "style": "dist/css/tabler.css",
+  "sass": "src/scss/tabler.scss",
+  "main": "dist/js/tabler.js",
+  "homepage": "https://tabler.io",
+  "devDependencies": {
+    "@babel/core": "^7.12.9",
+    "@babel/preset-env": "^7.12.7",
+    "@rollup/plugin-commonjs": "^17.0.0",
+    "@rollup/plugin-node-resolve": "^11.0.0",
+    "@rollup/stream": "^1.1.0",
+    "autoprefixer": "^10.0.4",
+    "browser-sync": "^2.26.13",
+    "critical": "^2.0.6",
+    "cross-spawn": "^7.0.3",
+    "gulp": "^4.0.2",
+    "gulp-clean": "^0.4.0",
+    "gulp-clean-css": "^4.3.0",
+    "gulp-debug": "^4.0.0",
+    "gulp-header": "^2.0.9",
+    "gulp-minify": "^3.1.0",
+    "gulp-postcss": "^9.0.0",
+    "gulp-purgecss": "^3.0.0",
+    "gulp-rename": "^2.0.0",
+    "gulp-sass": "^4.1.0",
+    "postcss": "^8.1.14",
+    "release-it": "^14.2.2",
+    "rollup": "^2.34.1",
+    "rollup-plugin-babel": "^4.4.0",
+    "vinyl-buffer": "^1.0.1",
+    "vinyl-source-stream": "^2.0.0",
+    "yaml": "^1.10.0",
+    "yargs": "^16.1.1"
+  },
+  "dependencies": {
+    "@fullcalendar/core": "^5.4.0",
+    "@fullcalendar/daygrid": "^5.4.0",
+    "@fullcalendar/interaction": "^5.4.0",
+    "@fullcalendar/list": "^5.4.0",
+    "@fullcalendar/timegrid": "^5.4.0",
+    "apexcharts": "^3.22.2",
+    "autosize": "^4.0.2",
+    "bootstrap": "twbs/bootstrap#d15a0247ce444eb15f79b8bf76f2bc10f8eeb71a",
+    "countup.js": "^2.0.7",
+    "daterangepicker": "^3.1.0",
+    "flatpickr": "^4.6.6",
+    "fullcalendar": "^5.4.0",
+    "imask": "^6.0.5",
+    "jquery": "^3.5.1",
+    "jqvmap": "^1.5.1",
+    "nouislider": "^14.6.3",
+    "popper.js": "^1.16.1",
+    "rollup-plugin-cleanup": "^3.2.1",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "selectize": "^0.12.6",
+    "@tabler/icons": "^1.37.0"
+  },
+  "resolutions": {
+    "**/**/node-gyp": "^5.0.0"
+  },
+  "release-it": {
+    "hooks": {
+      "after:bump": "gulp build --latest-version ${latestVersion} --new-version ${version} && gulp build-demo",
+      "after:release": "echo Successfully released ${name} v${latestVersion} to ${repo.repository}."
+    },
+    "git": {
+      "requireCleanWorkingDir": false,
+      "addUntrackedFiles": true,
+      "tagName": "v${version}"
+    },
+    "github": {
+      "release": true
+    }
+  }
+}
